# CompAud

./: .gitignore  README.md  pdf.py
backend/: README.md  modal_app.py  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  main.py  observability.py
backend/app/agents/: __init__.py  analysis_graph.py  auditor.py  compliance.py  evidence.py  ps3_embeddings.py  ps3_graph.py  ps3_linker.py  ps3_pdf.py  ps3_policy_parser.py  ps3_quality.py  ps3_report.py  report.py  risk.py
backend/app/collectors/: __init__.py  base.py  bucket.py  cloudtrail.py
backend/app/controllers/: __init__.py  analysis_controller.py  controls_controller.py  knowledge_controller.py  ps3_controller.py  system_controller.py
backend/app/knowledge/: __init__.py  graph.py  neo4j_loader.py
backend/app/llm/: client.py  prompts.py  ps3_prompts.py
backend/app/models/: __init__.py  analysis.py  auditor.py  base.py  compliance.py  controls.py  errors.py  evidence.py  ps3.py  risk.py  schemas.py  system.py
backend/app/scripts/: __init__.py  api.py  dev.py  openapi.py  phoenix.py  ps3_perf.py  ps3_report_sample.py  (+1 more)
backend/sample_inputs/: cloudtrail_events.json
backend/scripts/: test_analyze.py  verify_graph.py
backend/tests/: test_analysis_graph.py  test_analyze.py  test_auditor.py  test_compliance.py  test_controls.py  test_evidence.py  test_health.py  test_observability.py  test_openapi.py  test_ps3_api.py  test_ps3_collectors.py  test_ps3_linker.py  test_ps3_parser.py  test_ps3_perf.py  test_ps3_quality.py  test_ps3_report.py  test_report.py  test_risk.py  test_scripts.py
(+28 files in other folders)
