[project]
name = "CompAud-backend"
version = "0.1.0"
description = "FastAPI backend for CompAud compliance readiness analysis."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "arize-phoenix>=17.5.0",
    "arize-phoenix-otel>=0.16.1",
    "fastapi>=0.136.3",
    "langgraph>=1.2.5",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "modal>=1.5.0",
    "sentence-transformers>=5.5.1",
    "reportlab>=4.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.3",
]

[project.scripts]
compaud-api = "app.scripts.api:main"
compaud-dev = "app.scripts.dev:main"
compaud-openapi = "app.scripts.openapi:main"
compaud-phoenix = "app.scripts.phoenix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: end-to-end tests that run the full graph / embedding model"]
